--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,17 @@
 {
-    "extends": "airbnb-base",
-    "env": {
-       "es6": true,
-       "browser": true,
-       "jest": true
-    },
-  
-    "rules": {
-      "indent": [2, "tab"],
-      "no-tabs": 0,
-      "no-mixed-spaces-and-tabs": 0,
-      "no-restricted-syntax": [
-        "error",
-        "LabeledStatement",
-        "WithStatement"
-      ]
-    }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": "airbnb-base",
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "no-restricted-syntax": ["error", "LabeledStatement", "WithStatement"]
   }
+}
