--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "webpack.common.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --testPathPattern=./src/",
     "lint": "eslint",
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "e2e": "jest --clearCache && jest --testPathPattern=./e2e/ --runInBand --detectOpenHandles"
+    "e2e": "jest --testPathPattern=./e2e/"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
